[gd_scene load_steps=15 format=3 uid="uid://cbkcwlw0kc3nk"]

[ext_resource type="Texture2D" uid="uid://cmtpdedm1ey8g" path="res://sprites/lymphocyte.membrane.png" id="1_au5ra"]
[ext_resource type="Script" path="res://bodies/lymphocyte.gd" id="1_ph5vg"]
[ext_resource type="Texture2D" uid="uid://dhyfdaq4qinyv" path="res://sprites/lymphocyte.nucleus.png" id="2_cssrb"]
[ext_resource type="PackedScene" uid="uid://bwvnv4kvdejan" path="res://utils/health_component.tscn" id="4_27mus"]
[ext_resource type="PackedScene" uid="uid://dtl0ps1up22ii" path="res://utils/attack_area.tscn" id="5_bov45"]
[ext_resource type="PackedScene" uid="uid://bjiq1fjatlo2b" path="res://utils/threat_detection_area.tscn" id="5_h2flb"]
[ext_resource type="AudioStream" uid="uid://dx41jxmo81soa" path="res://sounds/lymphocyte_presence.wav" id="7_fcdih"]
[ext_resource type="AudioStream" uid="uid://dgo0mlahu7o5y" path="res://sounds/lymphocyte_presence_end.wav" id="8_c4nmr"]

[sub_resource type="Animation" id="Animation_i4frn"]
length = 2.4
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthComponent/Membrane:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 34, 34), Rect2(34, 0, 34, 34), Rect2(68, 0, 34, 34), Rect2(34, 0, 34, 34), Rect2(0, 0, 34, 34), Rect2(0, 34, 34, 34), Rect2(34, 34, 34, 34), Rect2(0, 34, 34, 34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthComponent/Membrane:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealthComponent/Nucleus:region_rect")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 34, 34), Rect2(34, 0, 34, 34), Rect2(68, 0, 34, 34), Rect2(34, 0, 34, 34), Rect2(0, 0, 34, 34), Rect2(0, 34, 34, 34), Rect2(34, 34, 34, 34)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthComponent/Nucleus:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 1.5708, 0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:shape:radius")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [15.0, 12.0, 15.0, 12.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [30.0, 32.0, 30.0, 32.0]
}

[sub_resource type="Animation" id="Animation_3erlv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [15.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e62p4"]
_data = {
"Idle": SubResource("Animation_i4frn"),
"RESET": SubResource("Animation_3erlv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjfjl"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4wyyj"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xk8v0"]

[node name="Lymphocyte" type="RigidBody2D"]
collision_layer = 4
collision_mask = 78
mass = 0.05
angular_damp = 1.0
script = ExtResource("1_ph5vg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e62p4")
}
autoplay = "Idle"

[node name="HealthComponent" parent="." instance=ExtResource("4_27mus")]
unique_name_in_owner = true
initial_health = 20.0
invulnerability_duration = 0.5

[node name="Membrane" type="Sprite2D" parent="HealthComponent"]
texture = ExtResource("1_au5ra")
region_enabled = true
region_rect = Rect2(68, 0, 34, 34)

[node name="Nucleus" type="Sprite2D" parent="HealthComponent"]
texture = ExtResource("2_cssrb")
region_enabled = true
region_rect = Rect2(68, 0, 34, 34)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xjfjl")

[node name="ThreatDetectionArea" parent="." instance=ExtResource("5_h2flb")]
unique_name_in_owner = true
speed = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThreatDetectionArea"]
shape = SubResource("CircleShape2D_4wyyj")

[node name="AttackArea" parent="." instance=ExtResource("5_bov45")]
collision_mask = 33
damage = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_xk8v0")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="Presence" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_fcdih")
volume_db = -15.0

[node name="PresenceEnd" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_c4nmr")
volume_db = -15.0

[node name="PresenceNotifier" type="VisibleOnScreenNotifier2D" parent="."]
unique_name_in_owner = true
position = Vector2(5.96046e-08, 2.38419e-07)
scale = Vector2(1.6, 1.6)

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="screen_entered" from="PresenceNotifier" to="." method="_on_presence_notifier_screen_entered"]
[connection signal="screen_exited" from="PresenceNotifier" to="." method="_on_presence_notifier_screen_exited"]
